[gd_scene load_steps=4 format=3 uid="uid://bfa2xbiiyaxkl"]

[ext_resource type="PackedScene" uid="uid://j82506cb8570" path="res://src/player.tscn" id="1_pla2g"]
[ext_resource type="Script" path="res://src/stage.gd" id="1_x0yvg"]
[ext_resource type="PackedScene" uid="uid://bh1nosmui2c64" path="res://src/enemy.tscn" id="2_7mh81"]

[node name="Stage" type="Node2D"]
script = ExtResource("1_x0yvg")
enemy_scene = ExtResource("2_7mh81")

[node name="Player" parent="." instance=ExtResource("1_pla2g")]
position = Vector2(161, 174)

[node name="SpawnPoint1" type="Marker2D" parent="."]
position = Vector2(254, -8)

[node name="SpawnPoint2" type="Marker2D" parent="."]
position = Vector2(649, 160)

[node name="SpawnPoint3" type="Marker2D" parent="."]
position = Vector2(377, 368)

[node name="SpawnPoint4" type="Marker2D" parent="."]
position = Vector2(-12, 243)

[node name="Enemy" parent="." instance=ExtResource("2_7mh81")]
position = Vector2(354, 180)
